<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ViewTripActivity" >

    <LinearLayout
        style="@style/Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ViewTripActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/headviewtrip"
                style="@style/Header"
                android:layout_gravity="center_horizontal"
                android:text="@string/headviewtrip" />

            <Button
                android:id="@+id/btndelete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:onClick="deleteTrip"
                android:text="@string/btndelete"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labeldestination"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/labeldestination" />

            <TextView
                android:id="@+id/viewdestname"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CCefe6d1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labelcreator"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/labelcreator" />

            <TextView
                android:id="@+id/viewcreator"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CCefe6d1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labeltime"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/labeltime" />

            <TextView
                android:id="@+id/viewtime"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CCefe6d1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labeldate"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:text="@string/labeldate" />

            <TextView
                android:id="@+id/viewdate"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#CCefe6d1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/labelname"
                style="@style/MenuLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="110dp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/friendlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#CCefe6d1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/labelname"
                    style="@style/MenuLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/labelfriendname"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labeldistance"
                    style="@style/MenuLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="distanceleft"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labeltime"
                    style="@style/MenuLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="timeleft"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>